[tool.poetry]
name = "JET_restaurant_project"
version = "0.1.0"
description = "Develop a system using a provided API to retrieve and filter data based on a given postcode, focusing specifically on restaurant information. The interface you create should display the following details from the 'restaurant object': Name, Cuisines, Numeric Rating, and Address."
authors = ["Isioma Iloh <ilohkingsleyisioma@gmail.com>"]
readme = "README.md"
repository = "https://github.com/IsiomaIloh/JET_restaurant_finder.git"

[tool.poetry.dependencies]
python = "^3.12"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
