[tool.poetry]
name = "jetApp"
version = "0.1.0"
description = "Develop a system using a provided API to retrieve and filter data based on a given postcode, focusing specifically on restaurant information. The interface you create should display the following details from the 'restaurant object': Name, Cuisines, Numeric Rating, and Address."
authors = ["Isioma Iloh <ilohkingsleyisioma@gmail.com>"]
readme = "README.md"
repository = "https://github.com/IsiomaIloh/JET_restaurant_finder.git"
packages = [
    { include = "jetApp", from = "." }
]

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.31.0"
flask = "^3.0.3"
pytest = "^8.1.1"
requests-mock = "^1.12.1"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
pythonpath = ["app"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
